Compilador/src/OlimpiaParser.java
// Generated from Olimpia.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class OlimpiaParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		PEGASO=1, HEC=2, ATE=3, JA=4, NUS=5, CAO=6, ECO=7, PROF=8, SIS=9, ERI=10, 
		HAR=11, LOG=12, HEFESTO=13, TEMIS=14, AFRODITE=15, ELY=16, DIO=17, HERMES=18, 
		HELIOS=19, HESTIA=20, APORIA=21, ErrorChar=22;
	public static final int
		RULE_inicio = 0, RULE_algoritmo = 1, RULE_instrucao = 2, RULE_declaracao = 3, 
		RULE_atribuicao = 4, RULE_acao = 5, RULE_operacao = 6, RULE_operando = 7, 
		RULE_operacao_calda = 8, RULE_controle = 9, RULE_se = 10, RULE_senao = 11, 
		RULE_cond = 12, RULE_booleano = 13, RULE_repeticao = 14, RULE_funcao = 15, 
		RULE_limbo = 16;
	private static String[] makeRuleNames() {
		return new String[] {
			"inicio", "algoritmo", "instrucao", "declaracao", "atribuicao", "acao", 
			"operacao", "operando", "operacao_calda", "controle", "se", "senao", 
			"cond", "booleano", "repeticao", "funcao", "limbo"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, "'('", "')'", "'{'", "'}'", "'caos'", "'eco'", "'profecia'", 
			"'sisifo'", "'eris'", "'harmonia'", "'logos'", null, null, null, "'elysium'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "PEGASO", "HEC", "ATE", "JA", "NUS", "CAO", "ECO", "PROF", "SIS", 
			"ERI", "HAR", "LOG", "HEFESTO", "TEMIS", "AFRODITE", "ELY", "DIO", "HERMES", 
			"HELIOS", "HESTIA", "APORIA", "ErrorChar"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Olimpia.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public OlimpiaParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InicioContext extends ParserRuleContext {
		public InicioContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_inicio; }
	 
		public InicioContext() { }
		public void copyFrom(InicioContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class OInicioContext extends InicioContext {
		public AlgoritmoContext algoritmo() {
			return getRuleContext(AlgoritmoContext.class,0);
		}
		public TerminalNode EOF() { return getToken(OlimpiaParser.EOF, 0); }
		public OInicioContext(InicioContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof OlimpiaListener ) ((OlimpiaListener)listener).enterOInicio(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof OlimpiaListener ) ((OlimpiaListener)listener).exitOInicio(this);
		}
	}

	public final InicioContext inicio() throws RecognitionException {
		InicioContext _localctx = new InicioContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_inicio);
		try {
			_localctx = new OInicioContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(34);
			algoritmo();
			setState(35);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AlgoritmoContext extends ParserRuleContext {
		public AlgoritmoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_algoritmo; }
	 
		public AlgoritmoContext() { }
		public void copyFrom(AlgoritmoContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class OAlgoritmoContext extends AlgoritmoContext {
		public List<InstrucaoContext> instrucao() {
			return getRuleContexts(InstrucaoContext.class);
		}
		public InstrucaoContext instrucao(int i) {
			return getRuleContext(InstrucaoContext.class,i);
		}
		public OAlgoritmoContext(AlgoritmoContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof OlimpiaListener ) ((OlimpiaListener)listener).enterOAlgoritmo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof OlimpiaListener ) ((OlimpiaListener)listener).exitOAlgoritmo(this);
		}
	}

	public final AlgoritmoContext algoritmo() throws RecognitionException {
		AlgoritmoContext _localctx = new AlgoritmoContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_algoritmo);
		int _la;
		try {
			_localctx = new OAlgoritmoContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(38); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(37);
				instrucao();
				}
				}
				setState(40); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 133058L) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InstrucaoContext extends ParserRuleContext {
		public InstrucaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instrucao; }
	 
		public InstrucaoContext() { }
		public void copyFrom(InstrucaoContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class OInstrucaoContext extends InstrucaoContext {
		public DeclaracaoContext declaracao() {
			return getRuleContext(DeclaracaoContext.class,0);
		}
		public AtribuicaoContext atribuicao() {
			return getRuleContext(AtribuicaoContext.class,0);
		}
		public AcaoContext acao() {
			return getRuleContext(AcaoContext.class,0);
		}
		public ControleContext controle() {
			return getRuleContext(ControleContext.class,0);
		}
		public RepeticaoContext repeticao() {
			return getRuleContext(RepeticaoContext.class,0);
		}
		public FuncaoContext funcao() {
			return getRuleContext(FuncaoContext.class,0);
		}
		public LimboContext limbo() {
			return getRuleContext(LimboContext.class,0);
		}
		public OInstrucaoContext(InstrucaoContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof OlimpiaListener ) ((OlimpiaListener)listener).enterOInstrucao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof OlimpiaListener ) ((OlimpiaListener)listener).exitOInstrucao(this);
		}
	}

	public final InstrucaoContext instrucao() throws RecognitionException {
		InstrucaoContext _localctx = new InstrucaoContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_instrucao);
		try {
			setState(49);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				_localctx = new OInstrucaoContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(42);
				declaracao();
				}
				break;
			case 2:
				_localctx = new OInstrucaoContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(43);
				atribuicao();
				}
				break;
			case 3:
				_localctx = new OInstrucaoContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(44);
				acao();
				}
				break;
			case 4:
				_localctx = new OInstrucaoContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(45);
				controle();
				}
				break;
			case 5:
				_localctx = new OInstrucaoContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(46);
				repeticao();
				}
				break;
			case 6:
				_localctx = new OInstrucaoContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(47);
				funcao();
				}
				break;
			case 7:
				_localctx = new OInstrucaoContext(_localctx);
				enterOuterAlt(_localctx, 7);
				{
				setState(48);
				limbo();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclaracaoContext extends ParserRuleContext {
		public DeclaracaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracao; }
	 
		public DeclaracaoContext() { }
		public void copyFrom(DeclaracaoContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ODeclaracaoContext extends DeclaracaoContext {
		public TerminalNode PEGASO() { return getToken(OlimpiaParser.PEGASO, 0); }
		public TerminalNode DIO() { return getToken(OlimpiaParser.DIO, 0); }
		public ODeclaracaoContext(DeclaracaoContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof OlimpiaListener ) ((OlimpiaListener)listener).enterODeclaracao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof OlimpiaListener ) ((OlimpiaListener)listener).exitODeclaracao(this);
		}
	}

	public final DeclaracaoContext declaracao() throws RecognitionException {
		DeclaracaoContext _localctx = new DeclaracaoContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_declaracao);
		try {
			_localctx = new ODeclaracaoContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(51);
			match(PEGASO);
			setState(52);
			match(DIO);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AtribuicaoContext extends ParserRuleContext {
		public AtribuicaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_atribuicao; }
	 
		public AtribuicaoContext() { }
		public void copyFrom(AtribuicaoContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class OAtribuicaoContext extends AtribuicaoContext {
		public TerminalNode LOG() { return getToken(OlimpiaParser.LOG, 0); }
		public DeclaracaoContext declaracao() {
			return getRuleContext(DeclaracaoContext.class,0);
		}
		public List<TerminalNode> DIO() { return getTokens(OlimpiaParser.DIO); }
		public TerminalNode DIO(int i) {
			return getToken(OlimpiaParser.DIO, i);
		}
		public TerminalNode HERMES() { return getToken(OlimpiaParser.HERMES, 0); }
		public TerminalNode HELIOS() { return getToken(OlimpiaParser.HELIOS, 0); }
		public TerminalNode HESTIA() { return getToken(OlimpiaParser.HESTIA, 0); }
		public OperacaoContext operacao() {
			return getRuleContext(OperacaoContext.class,0);
		}
		public OAtribuicaoContext(AtribuicaoContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof OlimpiaListener ) ((OlimpiaListener)listener).enterOAtribuicao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof OlimpiaListener ) ((OlimpiaListener)listener).exitOAtribuicao(this);
		}
	}

	public final AtribuicaoContext atribuicao() throws RecognitionException {
		AtribuicaoContext _localctx = new AtribuicaoContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_atribuicao);
		try {
			_localctx = new OAtribuicaoContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(56);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case PEGASO:
				{
				setState(54);
				declaracao();
				}
				break;
			case DIO:
				{
				setState(55);
				match(DIO);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(58);
			match(LOG);
			setState(64);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				{
				setState(59);
				match(DIO);
				}
				break;
			case 2:
				{
				setState(60);
				match(HERMES);
				}
				break;
			case 3:
				{
				setState(61);
				match(HELIOS);
				}
				break;
			case 4:
				{
				setState(62);
				match(HESTIA);
				}
				break;
			case 5:
				{
				setState(63);
				operacao();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AcaoContext extends ParserRuleContext {
		public AcaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_acao; }
	 
		public AcaoContext() { }
		public void copyFrom(AcaoContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class OAcaoContext extends AcaoContext {
		public TerminalNode ECO() { return getToken(OlimpiaParser.ECO, 0); }
		public TerminalNode DIO() { return getToken(OlimpiaParser.DIO, 0); }
		public TerminalNode HERMES() { return getToken(OlimpiaParser.HERMES, 0); }
		public TerminalNode HELIOS() { return getToken(OlimpiaParser.HELIOS, 0); }
		public TerminalNode HESTIA() { return getToken(OlimpiaParser.HESTIA, 0); }
		public OperacaoContext operacao() {
			return getRuleContext(OperacaoContext.class,0);
		}
		public TerminalNode PROF() { return getToken(OlimpiaParser.PROF, 0); }
		public OAcaoContext(AcaoContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof OlimpiaListener ) ((OlimpiaListener)listener).enterOAcao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof OlimpiaListener ) ((OlimpiaListener)listener).exitOAcao(this);
		}
	}

	public final AcaoContext acao() throws RecognitionException {
		AcaoContext _localctx = new AcaoContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_acao);
		try {
			setState(76);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ECO:
				_localctx = new OAcaoContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(66);
				match(ECO);
				setState(72);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
				case 1:
					{
					setState(67);
					match(DIO);
					}
					break;
				case 2:
					{
					setState(68);
					match(HERMES);
					}
					break;
				case 3:
					{
					setState(69);
					match(HELIOS);
					}
					break;
				case 4:
					{
					setState(70);
					match(HESTIA);
					}
					break;
				case 5:
					{
					setState(71);
					operacao();
					}
					break;
				}
				}
				break;
			case PROF:
				_localctx = new OAcaoContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(74);
				match(PROF);
				setState(75);
				match(DIO);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class OperacaoContext extends ParserRuleContext {
		public OperacaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_operacao; }
	 
		public OperacaoContext() { }
		public void copyFrom(OperacaoContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class OOperacaoContext extends OperacaoContext {
		public OperandoContext operando() {
			return getRuleContext(OperandoContext.class,0);
		}
		public Operacao_caldaContext operacao_calda() {
			return getRuleContext(Operacao_caldaContext.class,0);
		}
		public OOperacaoContext(OperacaoContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof OlimpiaListener ) ((OlimpiaListener)listener).enterOOperacao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof OlimpiaListener ) ((OlimpiaListener)listener).exitOOperacao(this);
		}
	}

	public final OperacaoContext operacao() throws RecognitionException {
		OperacaoContext _localctx = new OperacaoContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_operacao);
		try {
			_localctx = new OOperacaoContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(78);
			operando();
			setState(79);
			operacao_calda();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class OperandoContext extends ParserRuleContext {
		public TerminalNode DIO() { return getToken(OlimpiaParser.DIO, 0); }
		public TerminalNode HERMES() { return getToken(OlimpiaParser.HERMES, 0); }
		public TerminalNode HELIOS() { return getToken(OlimpiaParser.HELIOS, 0); }
		public TerminalNode HESTIA() { return getToken(OlimpiaParser.HESTIA, 0); }
		public OperandoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_operando; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof OlimpiaListener ) ((OlimpiaListener)listener).enterOperando(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof OlimpiaListener ) ((OlimpiaListener)listener).exitOperando(this);
		}
	}

	public final OperandoContext operando() throws RecognitionException {
		OperandoContext _localctx = new OperandoContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_operando);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(81);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 1966080L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Operacao_caldaContext extends ParserRuleContext {
		public Operacao_caldaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_operacao_calda; }
	 
		public Operacao_caldaContext() { }
		public void copyFrom(Operacao_caldaContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class OOperacao_caldaContext extends Operacao_caldaContext {
		public TerminalNode HEFESTO() { return getToken(OlimpiaParser.HEFESTO, 0); }
		public OperandoContext operando() {
			return getRuleContext(OperandoContext.class,0);
		}
		public List<Operacao_caldaContext> operacao_calda() {
			return getRuleContexts(Operacao_caldaContext.class);
		}
		public Operacao_caldaContext operacao_calda(int i) {
			return getRuleContext(Operacao_caldaContext.class,i);
		}
		public OOperacao_caldaContext(Operacao_caldaContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof OlimpiaListener ) ((OlimpiaListener)listener).enterOOperacao_calda(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof OlimpiaListener ) ((OlimpiaListener)listener).exitOOperacao_calda(this);
		}
	}

	public final Operacao_caldaContext operacao_calda() throws RecognitionException {
		Operacao_caldaContext _localctx = new Operacao_caldaContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_operacao_calda);
		try {
			int _alt;
			_localctx = new OOperacao_caldaContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(83);
			match(HEFESTO);
			setState(84);
			operando();
			setState(88);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(85);
					operacao_calda();
					}
					} 
				}
				setState(90);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ControleContext extends ParserRuleContext {
		public ControleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_controle; }
	 
		public ControleContext() { }
		public void copyFrom(ControleContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class OControleContext extends ControleContext {
		public SeContext se() {
			return getRuleContext(SeContext.class,0);
		}
		public SenaoContext senao() {
			return getRuleContext(SenaoContext.class,0);
		}
		public OControleContext(ControleContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof OlimpiaListener ) ((OlimpiaListener)listener).enterOControle(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof OlimpiaListener ) ((OlimpiaListener)listener).exitOControle(this);
		}
	}

	public final ControleContext controle() throws RecognitionException {
		ControleContext _localctx = new ControleContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_controle);
		int _la;
		try {
			_localctx = new OControleContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(91);
			se();
			setState(93);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==HAR) {
				{
				setState(92);
				senao();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SeContext extends ParserRuleContext {
		public SeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_se; }
	 
		public SeContext() { }
		public void copyFrom(SeContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class OSeContext extends SeContext {
		public TerminalNode ERI() { return getToken(OlimpiaParser.ERI, 0); }
		public TerminalNode HEC() { return getToken(OlimpiaParser.HEC, 0); }
		public CondContext cond() {
			return getRuleContext(CondContext.class,0);
		}
		public TerminalNode ATE() { return getToken(OlimpiaParser.ATE, 0); }
		public TerminalNode JA() { return getToken(OlimpiaParser.JA, 0); }
		public TerminalNode NUS() { return getToken(OlimpiaParser.NUS, 0); }
		public List<InstrucaoContext> instrucao() {
			return getRuleContexts(InstrucaoContext.class);
		}
		public InstrucaoContext instrucao(int i) {
			return getRuleContext(InstrucaoContext.class,i);
		}
		public OSeContext(SeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof OlimpiaListener ) ((OlimpiaListener)listener).enterOSe(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof OlimpiaListener ) ((OlimpiaListener)listener).exitOSe(this);
		}
	}

	public final SeContext se() throws RecognitionException {
		SeContext _localctx = new SeContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_se);
		int _la;
		try {
			_localctx = new OSeContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(95);
			match(ERI);
			setState(96);
			match(HEC);
			setState(97);
			cond();
			setState(98);
			match(ATE);
			setState(99);
			match(JA);
			setState(103);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 133058L) != 0)) {
				{
				{
				setState(100);
				instrucao();
				}
				}
				setState(105);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(106);
			match(NUS);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SenaoContext extends ParserRuleContext {
		public SenaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_senao; }
	 
		public SenaoContext() { }
		public void copyFrom(SenaoContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class OSenaoContext extends SenaoContext {
		public TerminalNode HAR() { return getToken(OlimpiaParser.HAR, 0); }
		public TerminalNode JA() { return getToken(OlimpiaParser.JA, 0); }
		public TerminalNode NUS() { return getToken(OlimpiaParser.NUS, 0); }
		public List<InstrucaoContext> instrucao() {
			return getRuleContexts(InstrucaoContext.class);
		}
		public InstrucaoContext instrucao(int i) {
			return getRuleContext(InstrucaoContext.class,i);
		}
		public OSenaoContext(SenaoContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof OlimpiaListener ) ((OlimpiaListener)listener).enterOSenao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof OlimpiaListener ) ((OlimpiaListener)listener).exitOSenao(this);
		}
	}

	public final SenaoContext senao() throws RecognitionException {
		SenaoContext _localctx = new SenaoContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_senao);
		int _la;
		try {
			_localctx = new OSenaoContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			match(HAR);
			setState(109);
			match(JA);
			setState(113);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 133058L) != 0)) {
				{
				{
				setState(110);
				instrucao();
				}
				}
				setState(115);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(116);
			match(NUS);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
